--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'THE_MOVIE_DB_API_KEY', 'YOUR_API_KEY'
+        it.buildConfigField 'String', 'THE_MOVIE_DB_API_KEY', 'MOVIE_API_KEY'
     }
 }
 
